tests/small/bad/testMain03.lat
/*no return statement*/
int main(){
    int x, y = 7;
    printInt(x);
    printInt(y);
}